feat: Add favicon and waitlist form

--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TaskFlow - Modern Todo List</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      sizes="16x16"
+      href="/favicon-16x16.svg"
+    />
+    <link rel="icon" type="image/svg+xml" sizes="32x32" href="/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.svg" />
+    <meta name="theme-color" content="#3B82F6" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://s.pageclip.co/v1/pageclip.css"
+      media="screen"
     />
   </head>
   <body
@@ -68,11 +86,12 @@
           >
             Sign In
           </button>
-          <button
+          <a
+            href="#waitlist"
             class="px-6 py-2 bg-gradient-to-r from-blue-600 to-purple-600 rounded-full hover:from-blue-700 hover:to-purple-700 transition-all transform hover:scale-105 shadow-lg hover:shadow-xl"
           >
-            Get Started
-          </button>
+            Join Waitlist
+          </a>
         </div>
       </div>
     </nav>
@@ -118,11 +137,12 @@
           <div
             class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start"
           >
-            <button
+            <a
+              href="#waitlist"
               class="px-8 py-4 bg-gradient-to-r from-blue-600 to-purple-600 rounded-full text-lg font-semibold hover:from-blue-700 hover:to-purple-700 transition-all transform hover:scale-105 shadow-2xl hover:shadow-3xl animate-glow"
             >
-              Start Free Trial
-            </button>
+              Join the Waitlist
+            </a>
             <button
               class="px-8 py-4 glass rounded-full text-lg font-semibold hover:bg-white/10 transition-all"
             >
@@ -955,6 +975,152 @@
       </div>
     </section>
 
+    <!-- Waitlist Section -->
+    <section
+      id="waitlist"
+      class="py-20 px-6 bg-gradient-to-br from-blue-900 via-purple-900 to-pink-900 relative overflow-hidden"
+    >
+      <!-- Background Effects -->
+      <div class="absolute inset-0 overflow-hidden">
+        <div
+          class="absolute top-1/4 left-1/4 w-96 h-96 bg-cyan-500 rounded-full opacity-20 blur-3xl animate-float"
+        ></div>
+        <div
+          class="absolute bottom-1/4 right-1/4 w-96 h-96 bg-pink-500 rounded-full opacity-20 blur-3xl animate-float"
+          style="animation-delay: -3s"
+        ></div>
+        <div
+          class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-64 h-64 bg-purple-500 rounded-full opacity-15 blur-3xl animate-float"
+          style="animation-delay: -1.5s"
+        ></div>
+      </div>
+
+      <div class="max-w-2xl mx-auto relative z-10">
+        <div
+          class="bg-gradient-to-br from-slate-800/90 to-slate-900/90 backdrop-blur-xl p-10 rounded-3xl shadow-2xl border border-white/10"
+        >
+          <div class="text-center mb-8">
+            <h2 class="text-3xl font-bold mb-2">Join TaskFlow Waitlist</h2>
+            <p class="text-gray-300">
+              Be the first to experience the future of productivity
+            </p>
+          </div>
+          <form
+            action="https://send.pageclip.co/ovNamLgh3bm4PDwxxFnciKFmDJqPBa55/task-flow-waitlist"
+            method="post"
+            class="pageclip-form space-y-6"
+          >
+            <div>
+              <label
+                for="name"
+                class="block text-sm font-medium text-gray-300 mb-2"
+                >Full Name</label
+              >
+              <input
+                type="text"
+                name="name"
+                id="name"
+                required
+                placeholder="Enter your full name"
+                class="w-full px-4 py-3 rounded-lg bg-slate-800 border border-gray-600 text-white focus:ring-2 focus:ring-blue-500 focus:outline-none"
+              />
+            </div>
+
+            <div>
+              <label
+                for="email"
+                class="block text-sm font-medium text-gray-300 mb-2"
+                >Email Address</label
+              >
+              <input
+                type="email"
+                name="email"
+                id="email"
+                required
+                placeholder="Enter your email address"
+                class="w-full px-4 py-3 rounded-lg bg-slate-800 border border-gray-600 text-white focus:ring-2 focus:ring-blue-500 focus:outline-none"
+              />
+            </div>
+
+            <div>
+              <label
+                for="company"
+                class="block text-sm font-medium text-gray-300 mb-2"
+                >Company or Role (Optional)</label
+              >
+              <input
+                type="text"
+                name="company"
+                id="company"
+                placeholder="e.g. Startup Founder, Project Manager, Student"
+                class="w-full px-4 py-3 rounded-lg bg-slate-800 border border-gray-600 text-white focus:ring-2 focus:ring-blue-500 focus:outline-none"
+              />
+            </div>
+
+            <div>
+              <label
+                for="team_size"
+                class="block text-sm font-medium text-gray-300 mb-2"
+                >Team Size</label
+              >
+              <select
+                name="team_size"
+                id="team_size"
+                class="w-full px-4 py-3 rounded-lg bg-slate-800 border border-gray-600 text-white focus:ring-2 focus:ring-blue-500 focus:outline-none"
+              >
+                <option value="">Select team size</option>
+                <option value="just_me">Just me</option>
+                <option value="2-5">2-5 people</option>
+                <option value="6-15">6-15 people</option>
+                <option value="16-50">16-50 people</option>
+                <option value="50+">50+ people</option>
+              </select>
+            </div>
+
+            <div>
+              <label
+                for="use_case"
+                class="block text-sm font-medium text-gray-300 mb-2"
+                >Primary Use Case</label
+              >
+              <select
+                name="use_case"
+                id="use_case"
+                class="w-full px-4 py-3 rounded-lg bg-slate-800 border border-gray-600 text-white focus:ring-2 focus:ring-blue-500 focus:outline-none"
+              >
+                <option value="">Select primary use case</option>
+                <option value="personal">Personal task management</option>
+                <option value="team_projects">Team project management</option>
+                <option value="client_work">Client work tracking</option>
+                <option value="product_development">Product development</option>
+                <option value="other">Other</option>
+              </select>
+            </div>
+
+            <div class="flex items-start space-x-2">
+              <input
+                type="checkbox"
+                name="newsletter"
+                id="newsletter"
+                value="yes"
+                class="mt-1 h-4 w-4 text-blue-600 bg-slate-700 border-gray-500 rounded focus:ring-blue-500"
+              />
+              <label for="newsletter" class="text-sm text-gray-300">
+                I'd like to receive updates about TaskFlow and productivity tips
+              </label>
+            </div>
+
+            <button
+              type="submit"
+              class="pageclip-form__submit w-full py-3 px-6 bg-gradient-to-r from-blue-600 to-purple-600 rounded-full hover:from-blue-700 hover:to-purple-700 transition-all font-semibold shadow-lg"
+            >
+              <span>Join the Waitlist</span>
+            </button>
+          </form>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer -->
     <footer class="py-12 px-6 bg-slate-900 border-t border-gray-800">
       <div class="max-w-6xl mx-auto">
@@ -1208,4 +1374,5 @@
         });
     </script>
   </body>
+  <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 </html>
