--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>TaskFlow - Modern Todo List</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <link
       rel="icon"
       type="image/svg+xml"
       sizes="16x16"
-      href="/favicon-16x16.svg"
+      href="./favicon-16x16.svg"
     />
-    <link rel="icon" type="image/svg+xml" sizes="32x32" href="/favicon.svg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" sizes="32x32" href="./favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon.svg" />
     <meta name="theme-color" content="#3B82F6" />
 
     <script src="https://cdn.tailwindcss.com"></script>
